# git-hooks-manager

./: .gitignore  Makefile  README.md  git_hooks_manager.py  hookman.py  pyproject.toml  requirements.txt  setup.py
hookman/: __init__.py  __main__.py  cli.py  config.py  logger.py  utils.py
hookman/commands/: __init__.py  add_cmd.py  disable_cmd.py  export_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  profile_cmd.py  status_cmd.py  sync_cmd.py  uninstall_cmd.py
hookman/hooks/: __init__.py  builtins.py  profiles.py
tests/: conftest.py  test_add_library.py  test_builtins.py  test_cli.py  test_config.py  test_disable_enable.py  test_hookman.py  test_hooks_manager.py  test_init.py  test_install.py  test_legacy.py  test_logger.py  test_profile.py  test_smoke.py  test_status.py  test_sync.py  test_utils.py
