[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hookman"
version = "2.0.0"
description = "Git Hooks Manager — instala, gestiona y sincroniza git hooks"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Quesillo27", email = "sahidalcantarabarragan@gmail.com" }]
keywords = ["git", "hooks", "cli", "pre-commit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
hookman = "hookman.cli:main"

[project.urls]
Homepage = "https://github.com/Quesillo27/git-hooks-manager"
Issues = "https://github.com/Quesillo27/git-hooks-manager/issues"

[tool.setuptools.packages.find]
include = ["hookman*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
